==> rdnelson/elua/src/platform/tm4c/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "elua_adc.h"
#include "platform_conf.h"
#include "common.h"
#include "math.h"
#include "diskio.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "elua_int.h"
#include "driverlib/debug.h"
#include "driverlib/gpio.h"
#include "driverlib/can.h"
#include "driverlib/interrupt.h"
#include "driverlib/sysctl.h"
#include "driverlib/uart.h"
#include "driverlib/ssi.h"
#include "driverlib/timer.h"
#include "driverlib/pwm.h"
#include "driverlib/adc.h"
#include "driverlib/systick.h"
#include "driverlib/i2c.h"
#include "driverlib/flash.h"
#include "hw_types.h"
#include "hw_gpio.h"
#include "buf.h"
#include "utils.h"
#define TARGET_IS_BLIZZARD_RB1
#define PART_TM4C123GH6PM
#include "driverlib/pin_map.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#define UNLOCK_MAGIC_NUM 0x4C4F434B
#include "driverlib/usb.h"
#include "usblib/usblib.h"
#include "usblib/usbcdc.h"
#include "usblib/device/usbdevice.h"
#include "usblib/device/usbdcdc.h"
#include "usb_serial_structs.h"
#include "proxima/spi_help.h"
#define SYSTICKHZ       5
#define SYSTICKMS       (1000 / SYSTICKHZ)

int platform_init()
{
#if defined ( TM4C123GH6PM )
    MAP_SysCtlClockSet(SYSCTL_SYSDIV_2_5 | SYSCTL_USE_PLL | SYSCTL_OSC_MAIN | SYSCTL_XTAL_16MHZ);
#endif

    pios_init();

#if NUM_SPI > 0
    spis_init();
#endif

#ifdef BUILD_MMCFS
    setup_select();
    select_chip(0);
#endif

#if NUM_I2C > 0
    i2c_init();
#endif

    uarts_init();
    timers_init();

#if NUM_PWM > 0
    pwms_init();
#endif

#ifdef BUILD_ADC
    adcs_init();
#endif

#ifdef BUILD_CAN
    cans_init();
#endif

#ifdef BUILD_USB_CDC
    usb_init();
#endif

    cmn_systimer_set_base_freq( MAP_SysCtlClockGet() );
    cmn_systimer_set_interrupt_freq( SYSTICKHZ );

    cmn_platform_init();

#if VTMR_NUM_TIMERS > 0
    MAP_SysTickPeriodSet( MAP_SysCtlClockGet() / SYSTICKHZ );
    MAP_SysTickEnable();
    MAP_SysTickIntEnable();
    MAP_IntMasterEnable();
#endif

    return PLATFORM_OK;
}

static void pios_init()
{
    unsigned int i;

    for ( i = 0; i < NUM_PIO; i++ )
    {
        MAP_SysCtlPeripheralEnable(pio_sysctl[ i ]);
    }

    HWREG( GPIO_PORTF_BASE + GPIO_O_LOCK ) = UNLOCK_MAGIC_NUM;
    HWREG( GPIO_PORTD_BASE + GPIO_O_LOCK ) = UNLOCK_MAGIC_NUM;

    HWREG( GPIO_PORTF_BASE + GPIO_O_CR ) |= GPIO_PIN_0;
    HWREG( GPIO_PORTD_BASE + GPIO_O_CR ) |= GPIO_PIN_7;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
    pio_type retval = 1, base = pio_base [ port ];

    switch( op )
    {
        case PLATFORM_IO_PORT_SET_VALUE:
            MAP_GPIOPinWrite( base, 0xFF, pinmask );
            break;

        case PLATFORM_IO_PIN_SET:
            MAP_GPIOPinWrite( base, pinmask, pinmask );
            break;

        case PLATFORM_IO_PIN_CLEAR:
            MAP_GPIOPinWrite( base, pinmask, 0 );
            break;

        case PLATFORM_IO_PORT_DIR_INPUT:
            pinmask = 0xFF;
        case PLATFORM_IO_PIN_DIR_INPUT:
            MAP_GPIOPinTypeGPIOInput( base, pinmask );
            break;

        case PLATFORM_IO_PORT_DIR_OUTPUT:
            pinmask = 0xFF;
        case PLATFORM_IO_PIN_DIR_OUTPUT:
            MAP_GPIOPinTypeGPIOOutput( base, pinmask );
            break;

        case PLATFORM_IO_PORT_GET_VALUE:
            retval = MAP_GPIOPinRead( base, 0xFF );
            break;

        case PLATFORM_IO_PIN_GET:
            retval = !!MAP_GPIOPinRead( base, pinmask );
            break;

        case PLATFORM_IO_PIN_PULLUP:
        case PLATFORM_IO_PIN_PULLDOWN:
            MAP_GPIOPadConfigSet( base, pinmask, GPIO_STRENGTH_8MA,
                    op == PLATFORM_IO_PIN_PULLUP ? GPIO_PIN_TYPE_STD_WPU : GPIO_PIN_TYPE_STD_WPD );
            break;

        case PLATFORM_IO_PIN_NOPULL:
            MAP_GPIOPadConfigSet( base, pinmask, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_STD );
            break;

        default:
            retval = 0;
            break;
    }

    return retval;
}

void cans_init(void)
{
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_CAN0);
    MAP_CANInit(CAN0_BASE);
    MAP_CANBitRateSet(CAN0_BASE, TM4C_CAN_CLOCK, CAN_INIT_SPEED);
    MAP_CANIntEnable(CAN0_BASE, CAN_INT_MASTER | CAN_INT_ERROR | CAN_INT_STATUS);
    MAP_IntEnable(INT_CAN0);
    MAP_CANEnable(CAN0_BASE);

    can_msg_rx.ulMsgID = 0;
    can_msg_rx.ulMsgIDMask = 0;
    can_msg_rx.ulFlags = MSG_OBJ_RX_INT_ENABLE | MSG_OBJ_USE_ID_FILTER;
    can_msg_rx.ulMsgLen = PLATFORM_CAN_MAXLEN;
    MAP_CANMessageSet(CAN0_BASE, CAN_MSG_OBJ_RX, &can_msg_rx, MSG_OBJ_TYPE_RX);
}

u32 platform_can_setup( unsigned int id, u32 clock )
{
    MAP_GPIOPinConfigure(GPIO_PE4_CAN0RX);
    MAP_GPIOPinConfigure(GPIO_PE5_CAN0TX);
    MAP_GPIOPinTypeCAN(CPIO_PORTE_BASE, GPIO_PIN_4 | GPIO_PIN_5);

    MAP_CANDisable(CAN0_BASE);
    MAP_CANBitRateSet(CAN0_BASE, TM4C_CAN_CLOCK, clock );
    MAP_CANEnable(CAN0_BASE);
    return clock;
}

static void spis_init()
{
    unsigned i;

    for ( i = 0; i < NUM_SPI; i++ )
    {
        MAP_SysCtlPeripheralEnable( spi_sysctl[i] );
    }
}

u32 platform_spi_setup( unsigned id, int mode, u32 clock, unsigned cpol, unsigned cpha, unsigned databits)
{
    unsigned protocol;

    if (cpol == 0)
    {
        protocol = cpha ? SSI_FRF_MOTO_MODE_1 : SSI_FRF_MOTO_MODE_0;
    }
    else
    {
        protocol = cpha ? SSI_FRF_MOTO_MODE_3 : SSI_FRF_MOTO_MODE_2;
    }

    mode = mode == PLATFORM_SPI_MASTER ? SSI_MODE_MASTER : SSI_MODE_SLAVE;

    MAP_SSIDisable( spi_base[ id ] );

    MAP_GPIOPinTypeSSI( spi_gpio_base[ id ], spi_gpio_pins[ id ] );

    MAP_GPIOPinConfigure( spi_gpiofunc[ id * 3 ] );
    MAP_GPIOPinConfigure( spi_gpiofunc[ id * 3 + 1 ] );
    MAP_GPIOPinConfigure( spi_gpiofunc[ id * 3 + 2 ] );

    MAP_GPIOPadConfigSet( spi_gpio_base[ id ], spi_gpio_pins[ id ], GPIO_STRENGTH_4MA, GPIO_PIN_TYPE_STD_WPU );

    MAP_SSIConfigSetExpClk( spi_base[ id ], MAP_SysCtlClockGet(), protocol, mode, clock, databits );
    MAP_SSIEnable( spi_base[ id ] );

    return clock;
}

u32 platform_i2c_setup( unsigned id, u32 speed )
{

    MAP_I2CMasterEnable( i2c_base[ id ] );

    MAP_GPIOPinConfigure( i2c_gpiofunc[ id << 1 ] );
    MAP_GPIOPinConfigure( i2c_gpiofunc[ ( id << 1 ) + 1 ] );

    MAP_GPIOPinTypeI2C( i2c_gpio_base[ id ], i2c_gpio_sdapins[ id ] );

    HWREG( i2c_gpio_base[ id ] + GPIO_O_PUR ) |= i2c_gpio_sdapins[ id ];

    MAP_GPIOPinTypeI2CSCL( i2c_gpio_base[ id ], i2c_gpio_sclpins[ id ] );
    MAP_GPIOPadConfigSet( i2c_gpio_base[ id ], i2c_gpio_sclpins[ id ], GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);

    MAP_I2CMasterInitExpClk( i2c_base[ id ], MAP_SysCtlClockGet(), speed == PLATFORM_I2C_SPEED_FAST );

    i2c_flags[ id ] = I2C_NO_TRANSFER;

    return speed;
}

static void uarts_init()
{
    unsigned i;
    for (i = 0; i < NUM_UART; i++ )
    {
        MAP_SysCtlPeripheralEnable(uart_sysctl[ i ]);
    }
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
    u32 config;

    if (id < NUM_UART )
    {
        MAP_GPIOPinConfigure( uart_gpiofunc[ id << 1 ] );
        MAP_GPIOPinConfigure( uart_gpiofunc[ (id << 1) + 1 ] );
        MAP_GPIOPinTypeUART( uart_gpio_base[ id ], uart_gpio_pins[ id ]);

        switch( databits )
        {
            case 5:
                config = UART_CONFIG_WLEN_5;
                break;
            case 6:
                config = UART_CONFIG_WLEN_6;
                break;
            case 7:
                config = UART_CONFIG_WLEN_7;
                break;
            default:
                config = UART_CONFIG_WLEN_8;
                break;
        }

        config |= ( stopbits == PLATFORM_UART_STOPBITS_1 ) ? UART_CONFIG_STOP_ONE : UART_CONFIG_STOP_TWO;

        if ( parity == PLATFORM_UART_PARITY_EVEN )
        {
            config |= UART_CONFIG_PAR_EVEN;
        }
        else if ( parity == PLATFORM_UART_PARITY_ODD )
        {
            config |= UART_CONFIG_PAR_ODD;
        }
        else if ( parity == PLATFORM_UART_PARITY_MARK )
        {
            config |= UART_CONFIG_PAR_ONE;
        }
        else if ( parity == PLATFORM_UART_PARITY_SPACE )
        {
            config |= UART_CONFIG_PAR_ZERO;
        }

        MAP_UARTConfigSetExpClk( uart_base[ id ], MAP_SysCtlClockGet(), baud, config );
        MAP_UARTConfigGetExpClk( uart_base[ id ], MAP_SysCtlClockGet(), &baud, &config );

        MAP_UARTEnable( uart_base[ id ] );
    }

    return baud;
}

static void timers_init()
{
    unsigned i;

    for( i = 0; i < NUM_TIMER; i++ )
    {
        MAP_SysCtlPeripheralEnable( timer_sysctl[ i ] );
        MAP_TimerConfigure( timer_base[ i ], TIMER_CFG_ONE_SHOT );
        MAP_TimerEnable( timer_base[ i ], TIMER_A);
    }
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
    (void) data;

    u32 res = 0;
    u32 base = timer_base[ id ];
    u8 prescale = 0;

    switch( op )
    {
        case PLATFORM_TIMER_OP_START:
            res = 0xFFFFFFFF;
            MAP_TimerControlTrigger( base, TIMER_A, false );
            MAP_TimerLoadSet( base, TIMER_A, 0xFFFFFFFF );
            break;

        case PLATFORM_TIMER_OP_READ:
            res = MAP_TimerValueGet( base, TIMER_A );
            break;

        case PLATFORM_TIMER_OP_SET_CLOCK:
            res = MAP_SysCtlClockGet();
            prescale = res / data > 0xFF ? 0xFF : ( res / data );
            MAP_TimerPrescaleSet( base, TIMER_A, prescale );
            res /= prescale + 1;
            break;

        case PLATFORM_TIMER_OP_GET_CLOCK:
            res = MAP_SysCtlClockGet();
            res /= MAP_TimerPrescaleGet( base, TIMER_A ) + 1;
            break;

        case PLATFORM_TIMER_OP_GET_MAX_CNT:
            res = 0xFFFFFFFF;
            break;
    }

    return res;
}

int platform_flash_erase_sector( u32 sector_id )
{
    return MAP_FlashErase( sector_id * INTERNAL_FLASH_SECTOR_SIZE ) == 0 ? PLATFORM_OK : PLATFORM_ERR;
}
